Feat: initial user track
