# src/apis/journeys/dtos/journey.dto.js
@@ -1,0 +1,8 @@
+import Joi from "joi";
+
+export default Joi.object().keys({
+  pageId: Joi.string().required(),
+  questionId: Joi.string().optional(),
+  answerOptionId: Joi.array().optional(),
+  customInputText: Joi.string().optional(),
+});
