# src/apis/pages/pages.router.js
@@ -5,4 +5,10 @@ import asyncHandler from "express-async-handler";
 
 const routes = express.Router();
 
+routes.get(
+  "/:chapterId",
+  authentication,
+  asyncHandler(pageController.getPageById)
+);
+
 module.exports = routes;
